--- a/content/book/5/5.6.md
+++ b/content/book/5/5.6.md
@@ -87,38 +87,25 @@ if (pd !=NULL){
 Функции управления динамической памятью низкого уровня. Работать с памятью на Си можно и на «низком» уровне, рассматривая переменные как области памяти известной размерности, используя операции sizeof для получения размерности переменных и преобразование типа указателя для изменения «точки зрения» на содержимое памяти (см. 10.2). Функции распределения памяти низкого уровня «не вникают» в содержание создаваемых переменных, единственно важным для них является их размерность, выраженная естественным для Си способом в байтах (при помощи операции sizeof). Адрес выделенной области памяти также возвращается в виде указателя типа void* - абстрактный адрес памяти без определения адресуемого типа данных.
 
  
-
+```c
 void       *malloc(int size);            // выделить область памяти размером
-
                                                 // в size байтов и возвратить адрес
-
 void       free(void *p);                  // освободить область памяти,
-
                         // выделенную по адресу p
-
 void       *realloc(void *p, int size);
-
                                                 // расширить выделенную область памяти
-
                         // до размера size, при изменении адреса
-
                                                 // переписать старое содержимое блока
-
 #include <alloc.h>                      // библиотека функций управления памятью
 
 double *pd;                    // Обычная динамическая переменная
-
 pd = (double*)malloc(sizeof(double));
-
 if (pd !=NULL){
-
             *pd = 5;
-
             free(pd); }
+```
 
- 
-
- Обратите внимание, что оператор delete, функции free и realloc не содержат размерности возвращаемой области памяти. Очевидно, что библиотека, управляющая динамической памятью, должна сохранять информацию о размерности выделенных блоков. Обычно размерность выделенной памяти размещается в первом слове блока, а программа получает адрес памяти «вслед за ним» (см.10.2).
+>Обратите внимание, что оператор delete, функции free и realloc не содержат размерности возвращаемой области памяти. Очевидно, что библиотека, управляющая динамической памятью, должна сохранять информацию о размерности выделенных блоков. Обычно размерность выделенной памяти размещается в первом слове блока, а программа получает адрес памяти «вслед за ним» (см.10.2).
 
 В заключение следует сказать, что динамическим переменным «не повезло»: несмотря на свое исключительное значение в деле представления данных переменной размерности, они синтаксически поддерживаются библиотекой, а не транслятором, то есть по большому счету «не входят в язык».
 
@@ -132,7 +119,7 @@ if (pd !=NULL){
 указанные действия  происходят во время работы программы и, следовательно, размерность массива может меняться от одного выполнения программы к другому.
 
  
-
+```c
 #include <malloc.h>                   // Библиотека функций управления памятью
 
 double *pd1,*pd2;                       // Массивы динамических переменных
@@ -150,7 +137,7 @@ for (i=0; i<n2; i++) pd2[i]=i;
 delete [ ]pd1;                                // Освобождение памяти
 
 free(pd2);
-
+```
  
 
 Замечание: функции динамического распределения памяти malloc/free/realloc и соответствующие операции new/delete являются механизмами разных уровней и не сводятся один к другому. Функции malloc/free/realloc представляют собой библиотеку «классического» Си и транслятором не контролируются. С их помощью можно работать с обычными переменными и их массивами, но никак не с объектами. Операции new/delete используют собственную систему контроля данных в динамической памяти, к тому же при работе с объектами необходимо использовать исключительно их. Отсюда рекомендации:
