--- a/content/book/1/1.6.md
+++ b/content/book/1/1.6.md
@@ -355,60 +355,47 @@ void main(){
 
 
 ```c
-void F(int a, int b) {…}
+void F(int a, int b) { … }
 
-void main(){
-
-            n=5;                              // «Две дырки и один штырек»
-
-            F(n);}
+void main() {
+  n=5;  // «Две дырки и один штырек»
+  F(n);
+}
 ```
 - «функция функции рознь» - то, что выполнение вызываемой функции «вкладывается» в последовательность выполнения вызывающей, вовсе не означает, что они должны быть записаны одна внутри другой. Синтаксически функции являются независимыми друг от друга единицами;
 
-
-
 ```c 
 void F() {
-
-            void G(){ }                    // Вложенное определение
-
-                                                // вместо вызова одной функции из другой
-
+  void G() { }  // Вложенное определение
+                // вместо вызова одной функции из другой
 }
 ```
 - «Алиса в Зазеркалье» -  каждая функция имеет свой контекст, в вызывающей функции – свой, в вызываемой – свой. Попытки использовать контекст одной функции, находясь в другой, сравнимы с попыткой схватить собственное отражение в зеркале. Связь между контекстами устанавливается только через взаимодействие формальных и фактических параметров;
 
 ```c 
 void F(int n) {
-
-            int a=5;
-
+  int a=5;
 }
 
 void main(){
-
-            n=5;                             // Использование контекста вызываемой функции
-
-            F(n);
-
-}```
+  n=5;  // Использование контекста вызываемой функции
+  F(n);
+}
+```
 
 - «путаница в синтаксисе». Синтаксис формальных и фактических параметров принципиально различны. Если формальный параметр задается как определение особой интерфейсной переменной, то фактический параметр имеет синтаксис использования или обозначения уже определенной переменной или выражения – последовательности действий, выполненных над несколькими такими переменными.
 
 ```c 
 void F(int A[], int n) {
-
-            int a=5;
-
+  int a=5;
 }
 
-void main(){ int B[]={1,5,6};
-
-            F(B[],3);                        // B должно быть без скобой -
-
-}                                   // обозначение объекта, который является МАССИВОМ
+void main() { 
+  int B[] = {1, 5, 6};
+  F(B[],3); // B должно быть без скобой -
+            // обозначение объекта, который является МАССИВОМ
+}                                   
 ```
-
 
 &nbsp;<Icon name="Smile"/>Прекрасной иллюстрацией механизм вызова функции и передачи ее результата служит «Сказка о петушке и бобовом зенышке»: петушок подавился зернышком, курочка побежала к корове за маслом, корова отправила ее к косцам за сеном, косцы отправили к кузнецу за косой. Кузнец отковал косу и т.д. в обратном порядке. Корова, косцы и кузнец – это в терминологии программирования функции, коса, сено и масло – результаты функций, а курочка – процессор.
 
